Tests, refactoring, cleanup